@@ -43,6 +43,7 @@ TEST_APP_NAME = \
 		buttons \
 		popupbuttons \
 		fontpanel \
+		gstextnetwork \
 		matrix \
 		menu \
 		nsbox \
@@ -75,6 +76,8 @@ nscursor_OBJC_FILES = nscursor.m ColorView.m
 nsimage_OBJC_FILES = nsimage.m ImageView.m
 nsimagecell_OBJC_FILES = nsimagecell.m
 nsscroller_OBJC_FILES = nsscroller.m
+gstextnetwork_OBJC_FILES = gstextnetwork.m
+gstextnetwork_RESOURCE_FILES = ./Edit/Readme.txt
 nstabview_OBJC_FILES = nstabview.m GSImageTabViewItem.m
 nstabview_RESOURCE_FILES = Smiley.tiff
 scrollview2_OBJC_FILES = scrollview2.m
